# NodeLite

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: release.yml
.workflow/: project.md  spec-analytics.jsonl  state.json
.workflow/scratch/quick-fix-ultrawide-display-half-width-2026-05-21/: index.json  plan.json
.workflow/scratch/quick-fix-ultrawide-display-half-width-2026-05-21/.summaries/: TASK-001-summary.md
.workflow/scratch/quick-fix-ultrawide-display-half-width-2026-05-21/.task/: TASK-001.json
.workflow/specs/: architecture-constraints.md  coding-conventions.md  learnings.md  quality-rules.md  test-conventions.md
config/: agent.example.toml  server.example.toml
nodelite-agent/src/: main.rs
nodelite-proto/src/: config.rs  lib.rs
nodelite-server/assets/: index.html  node.html
nodelite-server/src/: handlers.rs  history.rs  lib.rs  lib_tests.rs  load_test.rs  registry.rs  state.rs  test_support.rs  ws.rs
nodelite-server/src/handlers/settings/: mod.rs
nodelite-server/tests/integration/: token_lifecycle.rs
scripts/: deploy-update.sh  install-agent.sh  install-server.sh
ximonitor-agent/: Cargo.toml
ximonitor-agent/src/: collector.rs  main.rs
ximonitor-proto/src/: config.rs  lib.rs
ximonitor-server/: Cargo.toml
ximonitor-server/assets/: index.html  node.html  ui-i18n.json  verify-2fa.html
ximonitor-server/src/: admission.rs  auth.rs  handlers.rs  history.rs  load_test.rs  main.rs  registry.rs  snapshot.rs  state.rs  ui.rs  ws.rs
